Minor cleanups and refactorings.